--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,83 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="stylesheets/style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
     <title>timeCapsule</title>
 </head>
 <body>
 
 
+<nav class="navbar navbar-inverse navbar-fixed-top" style="background-color: #e3f2fd;">
+    <ul>
+        <li class = "active"><a href="#home">Home</a></li>
+        <li><a href="#contactUs">Contact Us</a></li>
+    </ul>
+</nav>
 
+<nav class="navbar navbar-light navbar-fixed-top" style="background-color: #e3f2fd;">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#home">Home</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#contactUs">Contact us<span class="sr-only">(current)</span></a></li>
+            </ul>
+
+            <form class="navbar-form navbar-right">
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Search">
+                </div>
+                <button type="submit" class="btn btn-primary">Search</button>
+            </form>
+        </div>
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container-fluid -->
+</nav>
+
+
+<div class="container" id="home">
+    <header>
+        <h1>timeCapsule</h1>
+        <br>
+        <div class = "subtitle">Let memory stay forever</div>
+    </header>
+</div>
+
+<div class="container">
+    <img class="center" src = "images/people.png">
+</div>
+
+
+<div class="container" id="contactUs">
+    <h3>contact us</h3>
+    <p style="text-align:center"><b>Handuo Wang</b></p>
+    <p style="text-align:center">Email: wang.hand@huksy.neu.edu</p>
+    <p style="text-align:center">Cell: (617)-961-2277</p>
+
+    <p style="text-align:center"><b>Bowen Lei</b></p>
+    <p style="text-align:center">Email: lei.b@husky.neu.edu</p>
+
+
+    <p style="text-align:center"><b>Yi Hou</b></p>
+    <p style="text-align:center">Email: hou.yi1@husky.neu.edu</p>
+
+</div>
 
 
 </body>
