--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,6 @@
 <body>
 
 
-<nav class="navbar navbar-inverse navbar-fixed-top" style="background-color: #e3f2fd;">
-    <ul>
-        <li class = "active"><a href="#home">Home</a></li>
-        <li><a href="#contactUs">Contact Us</a></li>
-    </ul>
-</nav>
-
 <nav class="navbar navbar-light navbar-fixed-top" style="background-color: #e3f2fd;">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -36,7 +29,10 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#contactUs">Contact us<span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="contact.html">Contact us<span class="sr-only">(current)</span></a></li>
+            </ul>
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="register.html">Log In<span class="sr-only">(current)</span></a></li>
             </ul>
 
             <form class="navbar-form navbar-right">
@@ -62,22 +58,6 @@
 
 <div class="container">
     <img class="center" src = "images/people.png">
-</div>
-
-
-<div class="container" id="contactUs">
-    <h3>contact us</h3>
-    <p style="text-align:center"><b>Handuo Wang</b></p>
-    <p style="text-align:center">Email: wang.hand@huksy.neu.edu</p>
-    <p style="text-align:center">Cell: (617)-961-2277</p>
-
-    <p style="text-align:center"><b>Bowen Lei</b></p>
-    <p style="text-align:center">Email: lei.b@husky.neu.edu</p>
-
-
-    <p style="text-align:center"><b>Yi Hou</b></p>
-    <p style="text-align:center">Email: hou.yi1@husky.neu.edu</p>
-
 </div>
 
 
